fix photo alignment on IE

--- a/app/sharedStyles/styles.css
+++ b/app/sharedStyles/styles.css
@@ -93,6 +93,7 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
+  left: 0;
   object-fit: cover;
 }
 
